# PythonBackend

./: .gitignore  README.md  __init__.py  pyproject.toml  wsgi_environ.md  wsgi_example.py  wsgi_middelware.py
FastAPI base app/: LICENSE  README.rst  __init__.py  pyproject.toml  setup.cfg
FastAPI base app/app/: __init__.py  contracts.py  main.py  routers.py
FastAPI base app/app/text_manipulations/: README.rst  __init__.py  clean_text.py  get_stopwords.py  text_lemmatize.py
FastAPI_app/: README.rst  __init__.py  pyproject.toml
FastAPI_app/Tests/: __init__.py
FastAPI_app/Tests/test_text_manipulations/: README.md  __init__.py  test_clean_text.py  test_get_stopwords.py  test_text_lemmatize.py
FastAPI_app/app/: __init__.py  contracts.py  main.py  routers.py
FastAPI_app/app/text_manipulations/: README.md  clean_text.py  get_stopwords.py  text_lemmatize.py
FastApplication/app/: __init__.py  contracts.py
RMQ/: docker-compose.yaml  recieve.py  send.py
selery/: app.py  tasks.py
