[tool.poetry]
name = "pythonbackend"
version = "0.1.0"
description = "Solution homework #4"
authors = ["datanalist"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.4"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
